--- a/src/index.css
+++ b/src/index.css
@@ -151,7 +151,7 @@ legend{
     bottom: 0
 }
 
-
+/*************  Аниимация для модальной окошки ************/
 @keyframes anvil {
     0% {
         transform: scale(1) translateY(0px);
