--- a/src/components/sideBar/SideBar.module.css
+++ b/src/components/sideBar/SideBar.module.css
@@ -1,8 +1,32 @@
-.logo{
-    height: 56px;
-    display: flex;
-    align-items: center;
-    margin-bottom: 84px;
+.nav{
+    position: fixed;
+    height: 100vh;
+    top: 145px;
+    z-index: 100;
+    overflow:hidden;
+    transition:all .3s ease;
+    cursor:pointer;
+    width: 88px;
+}
+
+.nav:hover{
+    width: 300px;
+    background: #FFFFFF;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.08);
+    backdrop-filter: blur(2px);
+    border-radius: 0 8px 8px 0;
+}
+
+.nav:hover li{
+    width: 300px;
+}
+
+.sidebarMenu li{
+    border-radius: 0 8px 8px 0;
+    width: 88px;
+    overflow: hidden;
+    transition:all .3s ease;
+    cursor:pointer;
 }
 
 .sidebarMenu{
@@ -32,7 +56,7 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 22px;
-    margin-left: 10px;
+    margin-left: 13px;
 }
 
 .lightIcon{
