--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,14 @@ body{
     padding: 0 56px;
 }
 
+.wrapper{
+    padding: 16px;
+    background: #FFFFFF;
+    box-shadow: 0 1px 6px 2px rgba(0, 0, 0, 0.08);
+    backdrop-filter: blur(2px);
+    border-radius: 8px;
+}
+
 .d-flex{
     display: flex;
 }
