feat: added main tables

--- a/src/pages/MainChart/MainChart.module.css
+++ b/src/pages/MainChart/MainChart.module.css
@@ -2,119 +2,15 @@
 
 }
 
-/************* поисквоя панель ************/
-.searchBar{
-    margin: 10px 0 16px;
-    display: flex;
-}
-
-.searchBar div:not(.searchBar div:last-child){
-    height: 56px;
-    margin-right: 16px;
-}
-
-.dateFieldBlock{
-    width: 20%;
-}
-
-.searchBar input{
-    width: 100%;
-    border: 0;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 19px;
-    color: #000000;
-    background-color: transparent;
-    padding: 5px 0;
-}
-
-.searchBar input:focus-visible{
-    border: 0;
-    outline: 0;
-}
-
-.searchFieldBlock{
-    width: 38%;
-}
-
-.buttonBlock{
-    width: 21%;
-}
-
-.buttonBlock button {
-    margin-top: 8px;
-}
-
-
-/************* подсказывающая панель ************/
-.helpBar{
-    display: flex;
-}
-
-.helps{
-    display: flex;
-    align-items: center;
-    margin-right: 24px;
-}
-
-.helps div{
-    height: 32px;
-    width: 40px;
+.mr8{
     margin-right: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.commonSign{
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 18px;
-    color: #FFFFFF;
+.tableBar{
+    width: 100%;
+    margin-top: 22px;
 }
 
-.helpsTitle{
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 18px;
-    color: #1E1E1E;
-}
-
-/*Отработано*/
-.workedOut{
-    background: #6CA2D2;
-    border: 1px solid #F7F7FA;
+.tableBar div{
     box-sizing: border-box;
-    border-radius: 4px;
-}
-
-/*Командировочные*/
-.mission{
-    background: #F4B4AE;
-    border: 1px solid #F7F7FA;
-    box-sizing: border-box;
-    border-radius: 4px;
-}
-
-/*Больничные*/
-.sickLeave{
-    background: #A3CAFA;
-    border: 1px solid #F7F7FA;
-    box-sizing: border-box;
-    border-radius: 4px;
-}
-
-/*Отпуск*/
-.furlough{
-    background: #C1AB77;
-    border: 1px solid #F7F7FA;
-    box-sizing: border-box;
-    border-radius: 4px;
-}
-/*Коэффициент*/
-.coefficient{
-    background: #472F91;
-    border: 1px solid #F7F7FA;
-    box-sizing: border-box;
-    border-radius: 4px;
 }
