--- a/src/pages/Employees/Employees.module.css
+++ b/src/pages/Employees/Employees.module.css
@@ -26,6 +26,7 @@
     line-height: 19px;
     color: #000000;
     padding: 5px 0;
+    background-color: transparent;
 }
 
 .searchBar select:focus-visible, .searchBar input:focus-visible{
@@ -47,6 +48,7 @@
     color: #000000;
     padding: 5px 0;
     box-sizing: border-box;
+    background-color: transparent;
 }
 
 .input::placeholder {
