--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,3 +1,11 @@
+.show{
+    display: block;
+}
+
+.fade{
+    display: none!important;
+}
+
 /*********** фон для модалок ***********/
 .modalBackdrop {
     position: fixed;
@@ -18,4 +26,44 @@
 .modalBackdrop.fade {
     opacity: 0;
     transition: 0.4s;
+}
+
+/**************** внизу с красным фоном *****************/
+.errorModal {
+    position: fixed;
+    z-index: 1051;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    overflow: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.errorModalContent {
+    background-color: #E25643;
+    width: 90%;
+    border-radius: 8px;
+}
+
+.errorModalContainer{
+    padding: 12px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.errorApiModalContainer{
+    padding: 12px 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.errorApiModalContainer h3{
+    color:white;
+    margin: 7px;
 }
