--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body{
     box-shadow: 0 1px 6px 2px rgba(0, 0, 0, 0.08);
     backdrop-filter: blur(2px);
     border-radius: 8px;
+    margin-bottom: 40px;
 }
 
 .mr-16{
