--- a/src/pages/MainChart/TableBarBody.module.css
+++ b/src/pages/MainChart/TableBarBody.module.css
@@ -3,6 +3,10 @@
     margin-bottom: 8px;
 }
 
+.tableBarBody > div{
+    box-sizing: border-box;
+}
+
 .tableBarBody2>.num, .tableBarBody2>.name{
     background-color: #71BF44!important;
     color: #FFFFFF!important;
@@ -35,12 +39,13 @@
 }
 
 .tableBarBody>div:nth-child(3){
-    width: 65%;
+    width: 60%;
     border: 1px solid #F7F7FA;
     border-radius: 4px;
     padding: 7px 0;
     text-align: center;
 }
+
 
 .tableBarBody .num{
     background: #F7F7FA;
@@ -79,15 +84,21 @@
 }
 
 .square{
+    position: relative;
     background: #F7F7FA;
     border: 0.5px solid #FFFFFF;
     box-sizing: border-box;
-    border-radius: 4px;
+    border-radius: 6px;
     min-width: 40px;
     min-height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+}
+
+.square2:hover{
+    box-shadow: 0 0 8px 1px #a9a7a7;
 }
 
 .square span{
@@ -124,8 +135,4 @@
 
 .table2 .freeDay span{
     color: #FFFFFF!important;
-}
-
-.activeCell{
-    background-color: red;
 }
