--- a/src/pages/MainChart/TableBarHeader.module.css
+++ b/src/pages/MainChart/TableBarHeader.module.css
@@ -1,13 +1,10 @@
 /************* header таблицы ************/
-.title{
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 18px;
-    color: #CCCCCC;
-}
-
 .TableBarHeader{
     display: flex;
+}
+
+.TableBarHeader > div{
+    box-sizing: border-box;
 }
 
 .TableBarHeader>div:nth-child(1){
@@ -18,22 +15,26 @@
     width: 25%;
     border: 1px solid #F7F7FA;
     border-radius: 4px;
-    padding: 7px 0;
-    text-align: center;
+    padding: 7px 0 7px 16px;
 }
 
 .TableBarHeader>div:nth-child(3){
     width: 60%;
     border: 1px solid #F7F7FA;
     border-radius: 4px;
-    padding: 7px 0;
-    text-align: center;
+    padding: 7px 0 7px 16px;
     margin-right: 8px;
-    box-sizing: border-box;
 }
 
 .TableBarHeader>div:nth-child(4), .TableBarHeader>div:nth-child(5), .TableBarHeader>div:nth-child(6),
 .TableBarHeader>div:nth-child(7)
 {
-   min-width: 40px;
+   max-width: 40px;
+}
+
+.title{
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #CCCCCC;
 }
