--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,11 @@ input:focus-visible{
     background: #472F91;
 }
 
+.btn-not-allowed{
+    opacity: 0.7;
+    cursor: not-allowed!important;
+}
+
 /*************  fieldset ************/
 fieldset{
     border: 0.5px solid #908e8e!important;
