feat: added filtering by name,position

--- a/src/pages/MainChart/SearchBar.module.css
+++ b/src/pages/MainChart/SearchBar.module.css
@@ -9,8 +9,8 @@
     margin-right: 16px;
 }
 
-.dateFieldBlock{
-    width: 20%;
+.dateFieldBlock, .selectFieldBlock{
+    width: 23%;
 }
 
 .searchBar input{
@@ -30,13 +30,35 @@
 }
 
 .searchFieldBlock{
-    width: 38%;
+    width: 24%;
 }
 
 .buttonBlock{
-    width: 21%;
+    width: 10%;
 }
 
 .buttonBlock button {
     margin-top: 8px;
+}
+
+/****************** выпдающий список отделов *******************/
+.selectFieldBlock select{
+    width: 100%;
+    border: 0;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 19px;
+    color: #000000;
+    padding: 5px 0;
+    background-color: transparent;
+}
+
+.selectFieldBlock select:focus-visible, .selectFieldBlock input:focus-visible{
+    border: 0;
+    outline: 0;
+}
+
+.searchIcon{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7487%) hue-rotate(147deg) brightness(109%) contrast(102%);
+    margin-right: 5px;
 }
