--- a/src/pages/Employees/Employees.module.css
+++ b/src/pages/Employees/Employees.module.css
@@ -74,7 +74,7 @@
     margin-top: 8px;
 }
 
-/****************** карточоки сотрудников *******************/
+/****************** карточки сотрудников *******************/
 .tableBar{
 
 }
@@ -106,7 +106,7 @@
 }
 
 .data{
-    width: 30%;
+    width: 80%;
 }
 
 .data ul li{
