--- a/src/pages/Employees/Employees.module.css
+++ b/src/pages/Employees/Employees.module.css
@@ -85,14 +85,26 @@
     margin-bottom: 24px;
 }
 
+.emplCard div{
+    box-sizing: border-box;
+}
+
+
 .emplCard div:not(.emplCard div:last-child){
     margin-right: 16px;
 }
 
-.photo img{
+.photo{
+    position: relative;
     width: 135px;
     height: 150px;
     border-radius: 8px;
+    overflow: hidden;
+}
+
+.photo img{
+    width: 100%;
+    height: 100%;
 }
 
 .labels{
@@ -106,7 +118,7 @@
 }
 
 .data{
-    width: 80%;
+    width: 35%;
 }
 
 .data ul li{
@@ -114,6 +126,30 @@
     font-size: 15px;
     line-height: 21px;
     color: #1E1E1E;
+}
+
+.photo:hover{
+    cursor: pointer;
+}
+
+.photo:hover .camera{
+    display: block;
+}
+
+.camera{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 4px 5px 2px;
+    display: none;
+}
+
+.addPhoto {
+    background-color: #71BF44;
+}
+
+.updatePhoto {
+    background-color: #CCCCCC;
 }
 
 /****************** добавление сотрудника *******************/
