feat: separated into a separate component

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body{
     background: #F7F7FA;
 }
 
-.container{
+.my-container{
     padding: 0 56px;
 }
 
@@ -63,7 +63,7 @@ input:focus-visible{
     outline: 0;
 }
 
-/*************  основная кнопка ************/
+/************* основная кнопка ************/
 .btn{
     height: 48px;
     width: 100%;
@@ -72,7 +72,7 @@ input:focus-visible{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 16px;
+    font-size: 0.9em;
     line-height: 22px;
     color: #FFFFFF;
 }
@@ -89,6 +89,11 @@ input:focus-visible{
     box-shadow:none;
 }
 
+.btn-not-allowed{
+    opacity: 0.7;
+    cursor: not-allowed!important;
+}
+
 /*************  кнопка-1 ************/
 .btn-main{
     background: #71BF44;
@@ -98,11 +103,6 @@ input:focus-visible{
 /*************  кнопка-2 ************/
 .btn-secondary{
     background: #472F91;
-}
-
-.btn-not-allowed{
-    opacity: 0.7;
-    cursor: not-allowed!important;
 }
 
 /*************  fieldset ************/
