--- a/src/pages/Remote/components/TableBodyRemote/TableBodyRemote.module.css
+++ b/src/pages/Remote/components/TableBodyRemote/TableBodyRemote.module.css
@@ -92,7 +92,20 @@
     align-items: center;
 }
 
-.square span{
+.square2{
+    position: relative;
+    background: #F7F7FA;
+    border: 0.5px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 6px;
+    min-width: 100%;
+    min-height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.square span, .square2 span{
     font-size: 16px;
     line-height: 18px;
     color: #000000;
@@ -118,7 +131,7 @@
 
 .allSum{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     width: 6%;
 }
 
