refactor: changed remote tables

--- a/src/pages/Remote/components/TableHeaderRemote/TableHeaderRemote.module.css
+++ b/src/pages/Remote/components/TableHeaderRemote/TableHeaderRemote.module.css
@@ -19,7 +19,7 @@
 }
 
 .TableBarHeader>div:nth-child(3){
-    width: 54%;
+    width: 57%;
     border: 1px solid #F7F7FA;
     border-radius: 4px;
     padding: 7px 0 7px 16px;
@@ -27,11 +27,12 @@
 
 .TableBarHeader>div:nth-child(4), .TableBarHeader>div:nth-child(5), .TableBarHeader>div:nth-child(6)
 {
-    width: 6%;
+    width: 5%;
     border: 1px solid #F7F7FA;
     border-radius: 4px;
-    padding: 7px 0 7px 16px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .title{
