--- a/src/pages/Remote/components/TableBodyRemote/TableBodyRemote.module.css
+++ b/src/pages/Remote/components/TableBodyRemote/TableBodyRemote.module.css
@@ -134,6 +134,10 @@
     width: 5%;
 }
 
+.checkMark:hover{
+    background-color: #d7d7d7;
+}
+
 .table1 .freeDay{
     background: rgba(113, 191, 68, 0.35);
     border: 0.5px solid #F7F7FA;
