refactor: changed class names

--- a/src/pages/StaffRate/components/TableHeaderStaffRate/TableHeaderStaffRate.module.css
+++ b/src/pages/StaffRate/components/TableHeaderStaffRate/TableHeaderStaffRate.module.css
@@ -1,32 +1,32 @@
 /************* header таблицы ************/
-.TableBarHeader{
+.tableHeader{
     display: flex;
 }
 
-.TableBarHeader > div:not(:first-child){
+.tableHeader > div:not(:first-child){
     box-sizing: border-box;
     border: 1px solid #F7F7FA;
     border-radius: 4px;
     padding: 7px 0 7px 16px;
 }
 
-.TableBarHeader>div:nth-child(1){
+.tableHeader>div:nth-child(1){
     width: 3%;
 }
 
-.TableBarHeader>div:nth-child(2){
+.tableHeader>div:nth-child(2){
     width: 30%;
 }
 
-.TableBarHeader>div:nth-child(3), .TableBarHeader>div:nth-child(4){
+.tableHeader>div:nth-child(3), .tableHeader>div:nth-child(4){
     width: 8%;
 }
 
-.TableBarHeader>div:nth-child(5) {
+.tableHeader>div:nth-child(5) {
     width: 45%;
 }
 
-.TableBarHeader>div:nth-child(6), .TableBarHeader>div:nth-child(7){
+.tableHeader>div:nth-child(6), .tableHeader>div:nth-child(7){
     width: 8%;
 }
 
