--- a/src/pages/StaffRate/components/TableBodyStaffRate/TableBodyStaffRate.module.css
+++ b/src/pages/StaffRate/components/TableBodyStaffRate/TableBodyStaffRate.module.css
@@ -82,6 +82,20 @@
     padding: 16px;
 }
 
+ .ratio3{
+     background: #472F91;
+     display: flex;
+     align-items: center;
+     padding: 16px;
+ }
+
+ .ratioNum2{
+     font-weight: 600;
+     font-size: 16px;
+     line-height: 18px;
+     color: #FFFFFF;
+ }
+
 .comment{
     padding: 16px;
 }
@@ -90,6 +104,13 @@
     width: 100%;
     border: 0;
     /*resize: none;*/
+}
+
+.comment textarea::placeholder{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    color: rgba(0, 0, 0, 0.35);
 }
 
 
