--- a/src/pages/StaffRate/components/TableBodyStaffRate/TableBodyStaffRate.module.css
+++ b/src/pages/StaffRate/components/TableBodyStaffRate/TableBodyStaffRate.module.css
@@ -103,7 +103,8 @@
 .comment textarea {
     width: 100%;
     border: 0;
-    /*resize: none;*/
+    resize: none;
+    overflow: hidden;
 }
 
 .comment textarea::placeholder{
@@ -111,6 +112,11 @@
     font-size: 16px;
     line-height: 18px;
     color: rgba(0, 0, 0, 0.35);
+}
+
+.comment textarea:active, :hover, :focus {
+    outline: 0;
+    outline-offset: 0;
 }
 
 
