feat: added style login page

--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,7 @@ input:focus-visible{
     background: #472F91;
 }
 
+/*************  кнопка-3 ************/
 .btn-not-active{
     background: #E0E0E0;
 }
