--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -34,6 +34,10 @@
     border-radius: 8px;
     padding: 16px;
     border: 0;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #1E1E1E;
 }
 
 .input_container input::placeholder{
