feat: added LoginPassword page

--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,20 @@ body{
 
 /************* внешние отступы ************/
 
+.mb-24{
+    margin-bottom: 24px;
+}
+
 .mr-16{
     margin-right: 16px;
 }
 
 .mt-32{
     margin-top: 32px;
+}
+
+.mt-8{
+    margin-top: 8px!important;
 }
 
 .my-container{
