feat: login password page

--- a/src/pages/LoginPassword/LoginPassword.module.css
+++ b/src/pages/LoginPassword/LoginPassword.module.css
@@ -39,3 +39,69 @@
     line-height: 19px;
     color: #FFFFFF;
 }
+
+.input_container{
+    display: flex;
+    flex-direction: column;
+    margin-top: 8px;
+}
+
+.input_container label{
+    font-size: 16px;
+    line-height: 18px;
+    color: #FFFFFF;
+    margin-bottom: 8px;
+}
+
+.input_container input{
+    background: #EFEFEF;
+    border-radius: 8px;
+    padding: 16px;
+    border: 0;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #1E1E1E;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.input_container input::placeholder{
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: rgba(30, 30, 30, 0.5);
+}
+
+.input_container a{
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: right;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+    margin-top: 8px;
+}
+
+.password {
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.password_control {
+    position: absolute;
+    top: 11px;
+    right: 12px;
+    display: inline-block;
+    width: 25px;
+    height: 20px;
+}
+
+.view{
+    background: url(/src/media/icons/password_view.svg) 0 0 no-repeat;
+}
+
+.no_view{
+    background: url(/src/media/icons/password_no_view.svg) 0 0 no-repeat;
+}
