feat: password page

--- a/src/pages/LoginPassword/LoginPassword.module.css
+++ b/src/pages/LoginPassword/LoginPassword.module.css
@@ -66,23 +66,6 @@
     box-sizing: border-box;
 }
 
-.input_container input::placeholder{
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 18px;
-    color: rgba(30, 30, 30, 0.5);
-}
-
-.input_container a{
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 18px;
-    text-align: right;
-    text-decoration-line: underline;
-    color: #FFFFFF;
-    margin-top: 8px;
-}
-
 .password {
     position: relative;
     width: 100%;
@@ -91,7 +74,6 @@
 
 .password_control {
     position: absolute;
-    top: 11px;
     right: 12px;
     display: inline-block;
     width: 25px;
@@ -100,8 +82,27 @@
 
 .view{
     background: url(/src/media/icons/password_view.svg) 0 0 no-repeat;
+    top: 18px;
 }
 
 .no_view{
     background: url(/src/media/icons/password_no_view.svg) 0 0 no-repeat;
+    top:13px;
+}
+
+.input_container input::placeholder{
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: rgba(30, 30, 30, 0.5);
+}
+
+.input_container .forgot_password{
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: right;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+    margin-top: 8px;
 }
