refactor: setting welcome page

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ body{
     backdrop-filter: blur(2px);
     border-radius: 8px;
     margin-bottom: 40px;
+    box-sizing: border-box;
 }
 
 .d-flex{
