feat: profile dropdown, logout

--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -17,10 +17,55 @@
     justify-content: flex-end;
 }
 
+.profile:hover{
+    cursor: pointer;
+}
+
 .profileName{
     font-weight: 600;
     font-size: 15px;
     line-height: 18px;
     color: #000000;
     margin-left: 10px;
+}
+
+.dropdown{
+    position: absolute;
+    right: 56px;
+    top: 60px;
+    background-color: #ffff;
+    z-index: 99;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 5px 0;
+    width: 150px;
+}
+
+.dropdown_list{
+    padding: 4px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 4px;
+}
+
+.dropdown_list:hover{
+    background: rgba(113, 191, 68, 0.5);
+    color:#000;
+}
+
+.dropdown_menu{
+    padding: 0;
+    margin: 0;
+}
+
+.arrow{
+    margin-left: 10px;
+    transition: .4s;
+
+}
+
+.arrow_reverse{
+    margin-left: 10px;
+    transition: .4s;
+    transform: rotate(180deg);
 }
