--- a/src/pages/MainChart/components/SearchBar/SearchBar.module.css
+++ b/src/pages/MainChart/components/SearchBar/SearchBar.module.css
@@ -45,6 +45,37 @@
     margin-top: 8px;
 }
 
+
+/****************** текстовое поле для поиска по ФИО... *******************/
+.iconInside{
+    position:relative;
+}
+
+.input{
+    width: 100%;
+    border: 0;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 19px;
+    color: #000000;
+    padding: 5px 0;
+    box-sizing: border-box;
+    background-color: transparent;
+}
+
+.input::placeholder {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 19px;
+    color: #000000;
+}
+
+.icon{
+    position: absolute;
+    right: 0;
+    top: 7px;
+}
+
 /****************** выпдающий список отделов *******************/
 .selectFieldBlock select{
     width: 100%;
