--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -62,6 +62,7 @@
     margin-left: 10px;
     transition: .4s;
 
+
 }
 
 .arrow_reverse{
@@ -69,3 +70,105 @@
     transition: .4s;
     transform: rotate(180deg);
 }
+.modal_header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.input_box{
+    border: 0.5px solid rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    height: 48px;
+    width: 175%;
+    margin-right: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 10px;
+    font-size: 14px;
+}
+.input_box input::placeholder{
+    color: #000000;
+}
+
+.input_box input{
+    border:none;
+    height: 100%;
+    width: 100%;
+    background:none;
+    padding-left: 10px;
+    box-sizing: border-box;
+}
+.modal_title{
+    font-size: 22px;
+    margin-bottom: 16px;
+    margin-top: 0;
+}
+
+.modal_dropdown{
+    display: flex;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+
+.modal_dropdown_menu{
+    background: #FFFFFF;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    width: 130px;
+    position: absolute;
+    top: 30px;
+    right: -10px;
+    height: 100px;
+    margin-bottom: 0;
+    z-index: 99;
+
+
+}
+.modal_dropdown_menu span{
+    display: block;
+    padding: 4px 12px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 12px;
+    line-height: 16px;
+    align-items: center;
+
+}
+.modal_dropdown_menu span:hover{
+    background: rgba(113, 191, 68, 0.5);
+}
+.modal_subtitle{
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 14px;
+}
+.staff_img{
+    width: 32px;
+    height: 32px;
+    background: rgba(196, 196, 196, 1);
+    border-radius: 50%;
+    margin-right: 8px;
+}
+.modal_staff{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+.modal_staffname{
+    margin: 0;
+    font-size: 14px;
+}
+.modal_staffemail{
+    color: #1E1E1E;
+    opacity: 0.5;
+}
+
+.modal_link a{
+    text-decoration: underline;
+    color: #1E1E1E !important;;
+}
+
