--- a/src/pages/MainChart/components/SearchBar/SearchBar.module.css
+++ b/src/pages/MainChart/components/SearchBar/SearchBar.module.css
@@ -1,4 +1,4 @@
-/************* поисквоя панель ************/
+/************* start блоки поисковой панели ************/
 .searchBar{
     margin: 10px 0 16px;
     display: flex;
@@ -24,6 +24,7 @@
 .buttonBlock{
     width: 10%;
 }
+/************* end блоки поисковой панели ************/
 
 .searchBar input{
     width: 100%;
@@ -76,7 +77,7 @@
     top: 7px;
 }
 
-/****************** выпдающий список отделов *******************/
+/****************** start выпдающий список отделов *******************/
 .selectFieldBlock select{
     width: 100%;
     border: 0;
@@ -92,6 +93,14 @@
     border: 0;
     outline: 0;
 }
+
+.selectFieldBlock select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url("/src/media/icons/arrow_top.svg") transparent no-repeat 100% !important;
+}
+/****************** end выпдающий список отделов *******************/
 
 .searchIcon{
     filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7487%) hue-rotate(147deg) brightness(109%) contrast(102%);
